[package]
name = "sled"
version = "1.0.0-alpha.1"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
documentation = "https://docs.rs/sled/"
description = "Lightweight high-performance pure-rust transactional embedded database."
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["redis", "mongo", "sqlite", "lmdb", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
readme = "README.md"
exclude = ["benchmarks", "examples", "bindings", "scripts", "experiments"]

[dependencies]
bincode = "1.3.3"
cache-advisor = "1.0.12"
concurrent-map = { version = "5.0.27", features = ["serde"] }
ebr = "0.2.8"
log = "0.4.19"
marble = {version = "1.0.0-alpha.1" }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
serde = { version = "1.0", features = ["derive"] }
stack-map = { version = "1.0.3", features = ["serde"] }
zstd = "0.12.4"

[dev-dependencies]
env_logger = "0.10.0"
heed = "0.11.0"
num-format = "0.4.4"
rocksdb = "0.21.0"
rusqlite = "0.29.0"
sled = "0.34.7"
