[package]
name = "sled"
version = "0.34.7"
authors = ["Tyler Neely <t@jujit.su>"]
description = "Lightweight high-performance pure-rust transactional embedded database."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["redis", "mongo", "sqlite", "lmdb", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
documentation = "https://docs.rs/sled/"
readme = "README.md"
edition = "2018"
exclude = ["benchmarks", "examples", "bindings", "scripts", "experiments"]

[package.metadata.docs.rs]
features = ["docs", "metrics"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = true
opt-level = 3
overflow-checks = true

[features]
default = []
for-internal-testing-only = ["event_log", "lock_free_delays", "light_testing"]
light_testing = ["failpoints", "backtrace", "memshred"]
lock_free_delays = []
failpoints = []
event_log = []
metrics = ["num-format"]
no_logs = ["log/max_level_off"]
no_inline = []
pretty_backtrace = ["color-backtrace"]
docs = []
no_zstd = []
miri_optimizations = []
mutex = []
memshred = []

[dependencies]
libc = "0.2.96"
crc32fast = "1.2.1"
log = "0.4.14"
parking_lot = "0.12.1"
color-backtrace = { version = "0.5.1", optional = true }
num-format = { version = "0.4.0", optional = true }
backtrace = { version = "0.3.60", optional = true }
im = "15.1.0"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os="windows"))'.dependencies]
fs2 = "0.4.3"

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.3.1"
rand_distr = "0.3"
quickcheck = "0.9"
log = "0.4.14"
env_logger = "0.9.0"
zerocopy = "0.6.0"
byteorder = "1.4.3"

[[test]]
name = "test_crash_recovery"
path = "tests/test_crash_recovery.rs"
harness = false
