[package]
name = "sled"
version = "0.15.0"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a flash-sympathetic persistent lock-free B+ tree"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
documentation = "https://docs.rs/sled/"
readme = "README.md"

[features]
default = []
lock_free_delays = []

[profile.release]
debug = 2

[dependencies.log]
version = "0.4"
# features = ["max_level_off"]

[dependencies]
crossbeam-epoch = "0.1"
bincode = "0.8"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"
clippy = {version = "0.0", optional = true}
pagecache = "0.1"

[dev-dependencies]
quickcheck = "0.6"
rand = "0.4"
