[package]
name = "tests"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2018"

[dependencies]
quickcheck = "0.9"
rand = "0.6"
log = "0.4"
env_logger = "0.6"
libc = "0.2"
fail = "0.3"
lazy_static = "1.0"
color-backtrace = "0.2.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
jemallocator = "0.3"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.pagecache]
features = ["failpoints", "lock_free_delays", "event_log", "no_metrics"]
path = "../crates/pagecache"

[dependencies.sled]
features = ["failpoints", "lock_free_delays", "event_log", "no_metrics", "check_snapshot_integrity", "compression"]
path = "../crates/sled"
