[package]
name = "tests"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2018"

[dependencies]
quickcheck = "0.9.0"
rand = "0.7.0"
log = "0.4.8"
env_logger = "0.6.2"
libc = "0.2.62"
fail = "0.3.0"
lazy_static = "1.4.0"
color-backtrace = "0.2.3"
rand_distr = "0.2.1"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]

[dependencies.pagecache]
features = ["failpoints", "lock_free_delays", "event_log", "no_metrics"]
path = "../crates/pagecache"

[dependencies.sled]
features = ["failpoints", "lock_free_delays", "event_log", "no_metrics", "check_snapshot_integrity", "compression"]
path = "../crates/sled"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
jemallocator = "0.3.2"
