[package]
name = "critter"
publish = false
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2018"

[[bench]]
name = "sled"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.0"
sled = { path = "../.." }
jemallocator = "0.3.2"
