[package]
name = "stress2"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2018"

[profile.release]
panic = 'abort'
debug = true

[features]
default = []
lock_free_delays = ["sled/lock_free_delays"]
check_snapshot_integrity = ["sled/check_snapshot_integrity"]
compression = ["sled/compression"]
no_logs = ["sled/no_logs"]
no_metrics = ["sled/no_metrics"]
measure_allocs = ["sled/measure_allocs"]
no_jemalloc = []

[dependencies]
docopt = "1.0"
env_logger = "0.5"
rand = "0.4"
sled = { path = "../../crates/sled" }
jemallocator = "0.1"
log = "0.4"
color-backtrace = "0.1.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]
