[package]
name = "stress2"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2018"

[profile.release]
panic = 'abort'
debug = true

[features]
default = []
lock_free_delays = ["sled/lock_free_delays"]
io_uring = ["sled/io_uring"]
check_snapshot_integrity = ["sled/check_snapshot_integrity"]
compression = ["sled/compression"]
no_logs = ["sled/no_logs"]
no_metrics = ["sled/no_metrics"]
measure_allocs = ["sled/measure_allocs"]
no_jemalloc = []
logging = ["env_logger", "log", "color-backtrace"]

[dependencies]
docopt = "1.0"
rand = "0.4"
jemallocator = "0.1"
env_logger = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
color-backtrace = { version = "0.1.3", optional = true }

[dependencies.sled]
default_features = false
path = "../.."

[dependencies.serde]
version = "1.0"
features = ["derive"]
