[package]
name = "stress2"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2018"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = "fat"
debug = true
overflow-checks = true

[features]
default = []
lock_free_delays = ["sled/lock_free_delays"]
io_uring = ["sled/io_uring"]
event_log = ["sled/event_log"]
compression = ["sled/compression"]
no_logs = ["sled/no_logs"]
metrics = ["sled/metrics"]
jemalloc = ["jemallocator"]
logging = ["env_logger", "log", "color-backtrace"]
dh = ["dhat"]
memshred = []
measure_allocs = []

[dependencies]
rand = "0.7.3"
env_logger = { version = "0.7.1", optional = true }
log = { version = "0.4.8", optional = true }
color-backtrace = { version = "0.3.0", optional = true }
jemallocator = { version = "0.3.2", optional = true }
num-format = "0.4.0"
dhat = { version = "0.2.2", optional = true }

[dependencies.sled]
path = "../.."
