[package]
name = "sled-native"
version = "0.34.6"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a C-compatible API for sled"
license = "Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled/sled-native"
keywords = ["database", "embedded", "concurrent", "persistent", "c"]
documentation = "https://docs.rs/sled-native/"
edition = "2018"

[lib]
name = "sled"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.62"
sled = {version = "0.34.6", path = "../.."}
