[package]
name = "deterministic"
version = "0.1.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "deterministic building blocks for testable systems"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled/tree/master/crates/deterministic"
repository = "https://github.com/spacejam/sled"
keywords = ["testing", "realtime-scheduler"]
documentation = "https://docs.rs/deterministic/"

[dependencies]
rand = "0.6"
libc = "0.2"
serde = "1.0"
