[package]
name = "model"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
description = "model-based testing for data structures, with linearizability checking"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled/tree/master/crates/model"
repository = "https://github.com/spacejam/sled"
keywords = ["testing", "simulation", "deterministic", "model-checking"]
documentation = "https://docs.rs/model/"

[dependencies]
proptest = "0.8"
permutohedron = "0.2"
