[package]
name = "pagecache"
version = "0.19.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "lock-free pagecache and log for high-performance databases"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled/tree/master/crates/pagecache"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
documentation = "https://docs.rs/pagecache/"
readme = "README.md"
edition = "2018"

[features]
default = ["no_metrics"]
lock_free_delays = ["rand", "rand_chacha", "rand_distr", "parking_lot/deadlock_detection"]
check_snapshot_integrity = []
compression = ["zstd"]
failpoints = ["fail", "rand", "fail/failpoints"]
no_metrics = ["historian/disable"]
no_logs = ["log/max_level_off"]
no_inline = []
event_log = []
measure_allocs = []

[dependencies]
crossbeam-channel = "0.3.9"
crossbeam-epoch = "0.7.2"
crossbeam-utils = "0.6.6"
bincode = "1.1.4"
fxhash = "0.2.1"
libc = "0.2.62"
zstd = { version = "0.4.28", optional = true }
fail = { version = "0.3.0", optional = true }
rand = { version = "0.7.0", optional = true }
rand_chacha = { version = "0.2.1", optional = true }
rand_distr = { version = "0.2.1", optional = true }
crc32fast = "1.2.0"
log = "0.4.8"
historian = "4.0.3"
parking_lot = "0.9.0"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os="windows"))'.dependencies]
fs2 = "0.4.3"

[dev-dependencies]
rand = "0.7.0"
rand_chacha = "0.2.1"
rand_distr = "0.2.1"
