[package]
name = "pagetable"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
description = "simple wait-free two-level pagetable with 2mb pages"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled/tree/master/crates/pagetable"
repository = "https://github.com/spacejam/sled"
keywords = ["paging", "page-table", "table", "data-structure", "lookup"]
documentation = "https://docs.rs/pagetable/"

[dependencies]
sled_sync = { version = "0.1", path = "../sled_sync" }

[dev-dependencies]
model = {version = "0.1", path = "../model"}
rand = "0.5"
