[package]
name = "pagetable"
version = "0.1.3"
authors = ["Tyler Neely <t@jujit.su>"]
description = "simple wait-free two-level pagetable with 2mb pages"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled/tree/master/crates/pagetable"
repository = "https://github.com/spacejam/sled"
keywords = ["paging", "page-table", "table", "data-structure", "lookup"]
documentation = "https://docs.rs/pagetable/"
edition = "2018"

[dependencies]
sled_sync = { version = "0.2.2", path = "../sled_sync" }

[dev-dependencies]
model = "0.1"
rand = "0.6"
