[package]
name = "paxos"
version = "0.0.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "an easy to operate implementation of the CASPaxos protocol, built on sled"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
documentation = "https://docs.rs/paxos/"
readme = "README.md"

[dependencies]
sled = { path = "../sled", version = "0.15"}

[dev-dependencies]
quickcheck = "0.6"
rand = "0.4"
