[package]
name = "paxos"
version = "0.0.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a well-tested implementation of the CASPaxos protocol for the sled lightweight database kit"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "consensus", "distributed", "paxos"]
documentation = "https://docs.rs/paxos/"
readme = "README.md"

[dependencies]
sled = { path = "../sled", version = "0.15"}
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
quickcheck = "0.6"
rand = "0.4"
