[package]
name = "sled"
version = "0.18.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a modern embedded database"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
documentation = "https://docs.rs/sled/"
readme = "../../README.md"
edition = "2018"

[features]
default = []
lock_free_delays = ["pagecache/lock_free_delays", "sled_sync/lock_free_delays"]
failpoints = ["pagecache/failpoints"]
check_snapshot_integrity = []
no_logs = ["log/max_level_off", "pagecache/no_logs"]
no_metrics = ["pagecache/no_metrics"]
compression = ["pagecache/compression"]
nightly = ["pagecache/nightly"]
no_inline = ["pagecache/no_inline"]
event_log = ["pagecache/event_log"]
measure_allocs = ["pagecache/measure_allocs"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.log]
version = "0.4"

[dependencies]
pagecache = { path = "../pagecache", version = "0.11" }
sled_sync = { version = "0.3", path = "../sled_sync" }
futures = "0.1"
