[package]
name = "sled"
version = "0.24.1"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a modern embedded database"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
documentation = "https://docs.rs/sled/"
readme = "../../README.md"
edition = "2018"

[features]
default = []
lock_free_delays = ["pagecache/lock_free_delays"]
compression = ["pagecache/compression"]
failpoints = ["pagecache/failpoints"]
no_metrics = ["pagecache/no_metrics"]
no_logs = ["log/max_level_off", "pagecache/no_logs"]
no_inline = ["pagecache/no_inline"]
event_log = ["pagecache/event_log"]
measure_allocs = ["pagecache/measure_allocs"]
check_snapshot_integrity = []

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.log]
version = "0.4"

[dependencies]
pagecache = { path = "../pagecache", version = "0.17" }
futures = "0.1"
serde_bytes = "0.11"
