[package]
name = "sled"
version = "0.26.3"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a modern embedded database"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["database", "embedded", "concurrent", "persistent", "lock-free"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
documentation = "https://docs.rs/sled/"
readme = "../../README.md"
edition = "2018"

[features]
default = []
lock_free_delays = ["pagecache/lock_free_delays"]
compression = ["pagecache/compression"]
failpoints = ["pagecache/failpoints"]
no_metrics = ["pagecache/no_metrics"]
no_logs = ["log/max_level_off", "pagecache/no_logs"]
no_inline = ["pagecache/no_inline"]
event_log = ["pagecache/event_log"]
measure_allocs = ["pagecache/measure_allocs"]
check_snapshot_integrity = ["pagecache/check_snapshot_integrity"]

[dependencies]
pagecache = { path = "../pagecache", version = "0.19.1" }
serde_bytes = "0.11.2"
parking_lot = "0.9.0"
log = "0.4.8"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]
