[package]
name = "sled_sync"
description = "testable concurrent primitives for the sled database framework"
version = "0.2.0"
license = "MIT/Apache-2.0"
authors = ["Tyler Neely <tyler.neely@ferrous-systems.com>"]
edition = "2018"

[features]
lock_free_delays = []
nightly = []
no_inline = []

[dependencies]
crossbeam-epoch = "0.6"
log = "0.4"
rand = "0.6"
rand_hc = "0.1"
