[package]
name = "sled-fuuuuuuuuu"
version = "0.0.1"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.pagecache]
features = ["failpoints", "lock_free_delays"]
path = "../../crates/pagecache"

[dependencies.sled]
features = ["failpoints", "lock_free_delays", "check_snapshot_integrity"]
path = "../../crates/sled"

[dependencies]
tests = {path = ".."}
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_tree_ops"
path = "fuzz_targets/fuzz_tree_ops.rs"
